refactoring for decompiler